[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "demo-server"
version = "0.1.0"
description = ""
authors = ["David Neugebauer <david.neugebauer@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1"
peewee = "^3.13"
APScheduler = "^3.6"
Flask-Limiter = "^1.2.1"

[tool.poetry.dev-dependencies]
